%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  serializedVersion: 2
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: BloodWingController
  m_AnimatorParameters:
  - m_Name: bDive
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: bReCall
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: bHover
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 1107113898219285828}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1107 &1107113898219285828
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 1102735111298101597}
  m_States:
  - {fileID: 1102413604096243838}
  - {fileID: 1102735111298101597}
  - {fileID: 1102192467321643780}
  - {fileID: 1102988830493776817}
  - {fileID: 1102889950650006805}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
  - first: {fileID: 1102413604096243838}
    second:
    - {fileID: 1101695685150200422}
  - first: {fileID: 1102735111298101597}
    second:
    - {fileID: 1101968101623549277}
    - {fileID: 1101712128663161556}
    - {fileID: 1101707567948153038}
  - first: {fileID: 1102192467321643780}
    second: []
  - first: {fileID: 1102988830493776817}
    second:
    - {fileID: 1101360719172616127}
  - first: {fileID: 1102889950650006805}
    second:
    - {fileID: 1101067835804040794}
  - first: {fileID: 0}
    second: []
  m_MotionSetCount: 0
  m_AnyStatePosition: {x: 0, y: -250, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
--- !u!1102 &1102413604096243838
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Dive
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: aa78171af736716409c7e9fb77a27144, type: 2}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 0, y: 0, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: Dive
--- !u!1101 &1101695685150200422
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102192467321643780}
  m_TransitionDuration: 0.15
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent:
    m_EventTreshold: 0
    m_ExitTime: 0.85
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 1
--- !u!1102 &1102735111298101597
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Fly
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: a705efe6bc2152d4ba64b0a3a3bcc7e7, type: 2}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 250, y: 0, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: Fly
--- !u!1101 &1101968101623549277
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102413604096243838}
  m_TransitionDuration: 0.23132381
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bDive
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 1
--- !u!1101 &1101712128663161556
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102988830493776817}
  m_TransitionDuration: 0.375
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bReCall
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 1
--- !u!1101 &1101707567948153038
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102889950650006805}
  m_TransitionDuration: 0.375
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bHover
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 1
--- !u!1102 &1102192467321643780
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: End
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 0}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 500, y: 0, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: End
--- !u!1102 &1102988830493776817
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: ReCall
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 35962165245b1054398dae4c11b69d8c, type: 2}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 0, y: 250, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: ReCall
--- !u!1101 &1101360719172616127
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102735111298101597}
  m_TransitionDuration: 0.02401089
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: bReCall
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 1
--- !u!1102 &1102889950650006805
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Hover
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: a741329275e7e3b42aa5c1dd90cac711, type: 2}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 250, y: 250, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: Hover
--- !u!1101 &1101067835804040794
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102413604096243838}
  m_TransitionDuration: 0.375
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bDive
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 1
